# correios-plus

./: README.md  pyproject.toml
.github/workflows/: actions.yaml
correios_plus/buscadores/: __init__.py  buscador.py  cep_localidade.py  endereco_cep.py  endereco_ou_cep.py
correios_plus/filtros/: __init__.py  filtro.py
correios_plus/modelos/: endereco_ou_cep_model.py
tests/: test_cep_localidade.py  test_cep_ou_endereco.py  test_endereco_cep.py
