[tool.poetry]
name = "correios-plus"
version = "0.1.0"
description = ""
authors = ["rodrigoneal <rodrigho2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.2"
mypy = "^1.11.1"
httpx = "^0.27.0"
bs4 = "^0.0.2"
types-beautifulsoup4 = "^4.12.0.20240511"
ruff = "^0.5.6"
isort = "^5.13.2"
coverage = "^7.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
